--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
         </activity>
         <!--//map api key meta added-->
         <meta-data android:name="com.google.android.maps.v2.API_KEY"
-            android:value="AIzaSyDzBJUTcoVt8SZxTvruR-E5xwfGofnbnUo"/>
+            android:value=""/>
 
         <meta-data android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version"/>
